removed my API key

--- a/vue-giphy-app/index.html
+++ b/vue-giphy-app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Oscar misses Rishika</title>
+    <title>VueJS Giphy App</title>
 
     <!-- Vuejs CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.js"></script>
@@ -13,12 +13,10 @@
     <!-- jQuery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 
-
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="style.css" />
 
 </head>
-
 <body>
     <div id="app">
         <div v-if="showGame" id="outer">
